@@ -3,8 +3,6 @@ package survivingit.gameobjects;
 import survivingit.Game;
 import survivingit.util.Maths;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -13,14 +11,41 @@ import java.util.List;
  */
 public enum Direction {
 
+    /**
+     * Left direction
+     */
     LEFT(-1, 0),
+    /**
+     * Up left direction
+     */
     UP_LEFT(-Maths.DIAGONAL_SPEED, -Maths.DIAGONAL_SPEED),
+    /**
+     * Up direction
+     */
     UP(0, -1),
+    /**
+     * Up right direction
+     */
     UP_RIGHT(Maths.DIAGONAL_SPEED, -Maths.DIAGONAL_SPEED),
+    /**
+     * Right direction
+     */
     RIGHT(1, 0),
+    /**
+     * Down right direction
+     */
     DOWN_RIGHT(Maths.DIAGONAL_SPEED, Maths.DIAGONAL_SPEED),
+    /**
+     * Down direction
+     */
     DOWN(0, 1),
+    /**
+     * Down left direction
+     */
     DOWN_LEFT(-Maths.DIAGONAL_SPEED, Maths.DIAGONAL_SPEED),
+    /**
+     * None direction
+     */
     NONE(0, 0);
 
     /**
@@ -43,7 +68,7 @@ public enum Direction {
         this.deltaY = deltaY;
     }
 
-    private static final List<Direction> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<Direction> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
 
     /**
